# Notify

./: .pre-commit-config.yaml  Cargo.toml  README.md  config.yaml  docker-compose.yaml
.github/workflows/: rust.yml
cassandra/: schema.cql
docker/kafka/: init.sh
src/: error.rs  kafka_consumer_service.rs  kafka_producer_service.rs  lib.rs  main.rs  types.rs
src/app/: consumer.rs  load_balancer.rs  mod.rs  producer.rs
src/config/: config.rs  mod.rs  parser.rs  types.rs
src/consumer/: kafka_notification_stream_consumer.rs  mod.rs  notification_stream_consumer.rs
src/error/database/: entity_not_found.rs  mod.rs
src/manager/: clients_manager.rs  mod.rs  notification_manager.rs  task_manager.rs
src/metrics/: load_metrics.rs  messages.rs  metrics_receiver.rs  metrics_sender.rs  mod.rs
src/models/: notification.rs
src/repository/: cassandra_repository.rs  mod.rs  repository.rs  types.rs
src/service/: load_balancer_service.rs  mod.rs  notification_service.rs
tests/: mod.rs  utils.rs
tests/integration/: mod.rs
tests/integration/consumer_tests/: app_startup_test.rs  consume_from_kafka_test.rs  metrics_test.rs  mod.rs  utils.rs
tests/unit/: casssandra_tests.rs  client_manager_tests.rs  mod.rs
tests/unit/repository_tests/: casssandra_tests.rs  mod.rs
