[package]
name = "Notify"
version = "0.1.0"
edition = "2021"   # or 2024 – either works

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
tokio = { version = "1", features = ["full"] }    # async runtime
log = { version = "0.4", features = ["std", "serde"] }

futures = "0.3"                                    # for stream utilities (optional)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6.1.0"
clap = { version = "4.6.0", features = ["derive"] }
scylla = "1.5.0"
thiserror = "2.0.18"
